--- a/01-html/firstPage.html
+++ b/01-html/firstPage.html
@@ -7,5 +7,10 @@
 <body>
   <!-- content goes in body -->
   <h1>This is my first tag!!!</h1>
+  <h2>This is another heading</h2>
+  <h3>This is another heading!!!!</h3>
+
+  <p>This is <strong>some text</strong> <em>Lorem ipsum</em> dolor sit amet consectetur adipisicing elit.</p>
+  <p>Repudiandae molestiae alias ut eos nemo mollitia praesentium ullam quibusdam fugit saepe. Voluptatem voluptates dolorum adipisci molestias perspiciatis, quis hic officiis eum.</p>
 </body>
 </html>
