--- a/01-html/firstPage.html
+++ b/01-html/firstPage.html
@@ -12,5 +12,27 @@
 
   <p>This is <strong>some text</strong> <em>Lorem ipsum</em> dolor sit amet consectetur adipisicing elit.</p>
   <p>Repudiandae molestiae alias ut eos nemo mollitia praesentium ullam quibusdam fugit saepe. Voluptatem voluptates dolorum adipisci molestias perspiciatis, quis hic officiis eum.</p>
+
+  <ol>
+    <li>Red</li>
+    <li>Orange</li>
+    <li>Yellow
+      <ul>
+        <li>Sunflower</li>
+        <li>Banana
+          <ol>
+            <li>Frozen Banana</li>
+            <li>Non-Frozen Banana</li>
+          </ol>
+        </li>
+      </ul>
+    </li>
+  </ol>
+
+  <ul>
+    <li><strong>Red</strong></li>
+    <li>Orange</li>
+    <li>Yellow</li>
+  </ul>
 </body>
 </html>
