--- a/01-html/firstPage.html
+++ b/01-html/firstPage.html
@@ -10,6 +10,11 @@
   <h2>This is another heading</h2>
   <h3>This is another heading!!!!</h3>
 
+  <img src="corgi.jpg">
+
+  <a href="http://google.com">Click me to go to Google</a>
+  <a href="page2.html">Go to page 2</a>
+
   <p>This is <strong>some text</strong> <em>Lorem ipsum</em> dolor sit amet consectetur adipisicing elit.</p>
   <p>Repudiandae molestiae alias ut eos nemo mollitia praesentium ullam quibusdam fugit saepe. Voluptatem voluptates dolorum adipisci molestias perspiciatis, quis hic officiis eum.</p>
 
