--- a/01-html/rusty.html
+++ b/01-html/rusty.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Rusty Steele</h1>
   <p>Hi, I'm a dog. Woof!</p>
-  <img src="gorgi2.jpg">
+  <img src="corgi2.jpg">
   <h2>Some of my favorite places:</h2>
   <ul>
     <li>The beach</li>
