--- a/01-html/forms.html
+++ b/01-html/forms.html
@@ -5,8 +5,10 @@
 </head>
 <body>
   <h1>Login</h1>
-  <input type="text" placeholder="username">
-  <input type="password" placeholder="password">
-  <button type="submit">Submit</button>
+  <form>
+    <input name="username" type="text" placeholder="username">
+    <input name="password" type="password" placeholder="password">
+    <button type="submit">Submit</button>
+  </form>
 </body>
 </html>
