--- a/01-html/forms.html
+++ b/01-html/forms.html
@@ -6,8 +6,12 @@
 <body>
   <h1>Login</h1>
   <form>
-    <input name="username" type="text" placeholder="username">
-    <input name="password" type="password" placeholder="password">
+    <label for="username">Username:</label>
+    <input id="username" name="username" type="text" placeholder="username">
+
+    <label for="password">Password:</label>
+    <input id="password" name="password" type="password" placeholder="password">
+
     <button type="submit">Submit</button>
   </form>
 </body>
