--- a/01-html/forms.html
+++ b/01-html/forms.html
@@ -6,11 +6,11 @@
 <body>
   <h1>Login</h1>
   <form>
-    <label for="username">Username:</label>
-    <input id="username" name="username" type="text" placeholder="username">
+    <label for="email">Email:</label>
+    <input id="email" name="email" type="email" placeholder="email" required>
 
     <label for="password">Password:</label>
-    <input id="password" name="password" type="password" placeholder="password">
+    <input id="password" name="password" type="password" placeholder="password" required>
 
     <button type="submit">Submit</button>
   </form>
