Form Exercise: SOLUTION

--- a/01-html/form.html
+++ b/01-html/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Form exercise</title>
+  <title>Register</title>
 </head>
 <body>
   <h1>Register</h1>
@@ -30,7 +30,7 @@
       <input id="email" name="email" type="email" placeholder="your email" required>
 
       <label for="password">Password:</label>
-      <input id="password" name="password" type="password" placeholder="your password" required>
+      <input id="password" name="password" type="password" placeholder="your password" required pattern=".{5,10}" title="5 to 10 characters">
     </div>
 
     <div>
